--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,15 +12,27 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CountryQuiz"
         tools:targetApi="31">
+
+        <!-- Intro Activity (App starts here) -->
         <activity
-            android:name=".MainActivity"
+            android:name=".Intro"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- Main Activity -->
+        <activity
+            android:name=".MainActivity"
+            android:exported="true" />
+
+        <!-- Quiz Activity -->
+        <activity
+            android:name=".QuizActivity"
+            android:exported="false" />
+
     </application>
 
 </manifest>
