Added quiz result storage functionality

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.CountryQuiz"
         tools:targetApi="31">
 
-        <!-- Intro Activity (App starts here) -->
+        <!-- Main Launcher Activity -->
         <activity
             android:name=".Intro"
             android:exported="true">
@@ -33,6 +33,10 @@
             android:name=".QuizActivity"
             android:exported="false" />
 
+        <!-- Past Results Activity (Fixed Name) -->
+        <activity
+            android:name=".PastResultActivity"
+            android:exported="true" />
     </application>
 
 </manifest>
